--- a/nav.html
+++ b/nav.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <li><a href="#our-team">Our Team</a></li>
+    <li><a href="#contact">Contact Us</a></li>
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -34,4 +37,5 @@
       </div>
     </header>
   </body>
+
 </html>
