--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
     </section>
 
     <!-- Our Team Section -->
-    <section class="team" id="team">
-      <h2>Our Team</h2>
-      <div class="team-cards">
-        <div class="team-card">
-          <img src="assets/team1.jpg" alt="Team Member 1" />
-          <h3>Sarah Johnson</h3>
-          <p>President</p>
-        </div>
-        <div class="team-card">
-          <img src="assets/team2.jpg" alt="Team Member 2" />
-          <h3>John Doe</h3>
-          <p>Vice President</p>
-        </div>
-        <div class="team-card">
-          <img src="assets/team3.jpg" alt="Team Member 3" />
-          <h3>Jane Smith</h3>
-          <p>PR Head</p>
-        </div>
-      </div>
-    </section>
+    <section id="our-team" class="team-section">
+  <h2 class="section-title">Meet Our Team</h2>
+  <div class="team-grid">
+    <!-- Team Member Example -->
+    <div class="team-member">
+      <img src="team1.jpg" alt="Team Member">
+      <h3>Deepasha Dahiya</h3>
+      <p>Web Dev Lead</p>
+    </div>
+
+    <div class="team-member">
+      <img src="team2.jpg" alt="Team Member">
+      <h3>Member Name</h3>
+      <p>Role</p>
+    </div>
+
+    <!-- Repeat div for all 20–25 members -->
+  </div>
+</section>
+
 
     <!-- Recruitment Form Section -->
     <section class="recruitment" id="recruitment">
@@ -181,3 +181,4 @@
 
   </body>
 </html> -->
+
