--- a/nav.html
+++ b/nav.html
@@ -24,14 +24,16 @@
           <img id="logo" src="logo.jpeg" />
           <div id="logo-text">E-Cell</div>
         </div>
-        <navbar>
-          <div class="container-nav">
-            <div class="about-us">About Us</div>
-            <div class="our-team">Our Team</div>
-            <div class="past-events">Our Events</div>
+         <nav>
+      <ul class="container-nav">
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#our-team">Our Team</a></li>
+        <li><a href="#events">Our Events</a></li>
             <div class="contact-us">
               <button class="button-contact">Contact Us</button>
             </div>
+        </ul>
+         </nav>
           </div>
         </navbar>
       </div>
@@ -39,3 +41,4 @@
   </body>
 
 </html>
+
