--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img id="logo" src="logo.jpeg" />
           <div id="logo-text">E-Cell</div>
         </div>
-        <navbar>
+        <nav>
           <span id="navbar-overlay">
             <div class="container-nav">
               <div class="navhead about-us" href="#about-text">About Us</div>
@@ -39,7 +39,7 @@
               </div>
             </div>
           </span>
-        </navbar>
+        </nav>
       </div>
     </header>
 
@@ -181,4 +181,5 @@
 
   </body>
 </html> -->
+
 
