--- a/index.html
+++ b/index.html
@@ -93,25 +93,49 @@
     </section>
 
     <!-- Our Team Section -->
-    <section id="our-team" class="team-section">
-  <h2 class="section-title">Meet Our Team</h2>
-  <div class="team-grid">
-    <!-- Team Member Example -->
-    <div class="team-member">
-      <img src="team1.jpg" alt="Team Member">
-      <h3>Deepasha Dahiya</h3>
-      <p>Web Dev Lead</p>
-    </div>
+   <!-- ===== OUR TEAM SECTION ===== -->
+<section id="our-team" class="py-5 bg-light">
+  <div class="container text-center">
+    <h2 class="mb-4">Our Team</h2>
+    <p class="mb-5">Meet the people who make E-Cell IGDTUW possible 🚀</p>
 
-    <div class="team-member">
-      <img src="team2.jpg" alt="Team Member">
-      <h3>Member Name</h3>
-      <p>Role</p>
-    </div>
+    <div class="row">
+      <!-- Team Member 1 -->
+      <div class="col-md-4 mb-4">
+        <div class="card border-0 shadow-sm h-100">
+          <img src="assets/img/team1.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member 1" style="width:150px; height:150px; object-fit:cover;">
+          <div class="card-body">
+            <h5 class="card-title">Name 1</h5>
+            <p class="card-text">Position (e.g., President)</p>
+          </div>
+        </div>
+      </div>
 
-    <!-- Repeat div for all 20–25 members -->
+      <!-- Team Member 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="card border-0 shadow-sm h-100">
+          <img src="assets/img/team2.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member 2" style="width:150px; height:150px; object-fit:cover;">
+          <div class="card-body">
+            <h5 class="card-title">Name 2</h5>
+            <p class="card-text">Position (e.g., Vice President)</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Team Member 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="card border-0 shadow-sm h-100">
+          <img src="assets/img/team3.jpg" class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member 3" style="width:150px; height:150px; object-fit:cover;">
+          <div class="card-body">
+            <h5 class="card-title">Name 3</h5>
+            <p class="card-text">Position (e.g., PR Head)</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
 
 
     <!-- Recruitment Form Section -->
@@ -181,5 +205,6 @@
 
   </body>
 </html> -->
+
 
 
