--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <br />
           <div>
             <button
-              class="button-join"
+              class="recruit"
               href="#recruitment"
               style="margin-right: 1rem"
             >
@@ -70,6 +70,14 @@
         </div>
       </div>
     </div>
+    <div class="scroll-container">
+      <div class="scroll-wrapper">
+        <span class="scroll-text">Innovate • Create • Grow • </span>
+        <span class="scroll-text">Innovate • Create • Grow • </span>
+        <span class="scroll-text">Innovate • Create • Grow • </span>
+      </div>
+    </div>
+
     <!-- Events Section -->
     <section class="events" id="events">
       <h2>Our Events</h2>
