Updated contact,and added team page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           <span id="navbar-overlay">
             <div class="container-nav">
               <div class="navhead about-us" href="#about-text">About Us</div>
-              <div class="navhead our-team">Our Team</div>
-              <div class="navhead past-events">Our Events</div>
+              <a class="navhead our-team" href="our-team.html">Our Team</a>
+              <div class="navhead past-events"> Our Events</div>
               <div class="navhead blogs">Blogs</div>
               <div class="navhead contact-us">
-                <button class="button-contact">Contact Us</button>
+                <button class="button-contact" onclick="window.location.href='contact.html'">Contact Us</button>
               </div>
             </div>
           </span>
