--- a/nav.html
+++ b/nav.html
@@ -26,7 +26,7 @@
          <nav>
       <ul class="container-nav">
         <li><a href="#about">About Us</a></li>
-        <li><a href="#our-team">Our Team</a></li>
+        <a href="our-team.html">Our Team</a>
         <li><a href="#events">Our Events</a></li>
             <div class="contact-us">
               <button class="button-contact">Contact Us</button>
