--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,20 @@
       <a href="#"><i class="fab fa-github"></i></a>
       <a href="mailto:example@email.com"><i class="fas fa-envelope"></i></a>
     </div>
-  </div>
-</body>
-</html>
+    <!-- Message Form -->
+    <form action="mailto:ecell@igdtuw.ac.in" method="post" enctype="text/plain" style="margin-top:30px; z-index:1; position:relative;">
+      <input type="text" name="name" placeholder="Your Name" required style="padding:10px; width:80%; margin-bottom:10px; border-radius:10px; border:none;">
+      <input type="email" name="email" placeholder="Your Email" required style="padding:10px; width:80%; margin-bottom:10px; border-radius:10px; border:none;">
+      <textarea name="message" placeholder="Your Message" required style="padding:10px; width:80%; height:100px; border-radius:10px; border:none; margin-bottom:10px;"></textarea>
+      <br>
+      <button type="submit" style="padding:10px 20px; border:none; border-radius:10px; background:#00acee; color:#fff; cursor:pointer; transition:0.3s;">Send Message</button>
+    </form>
+
+    <!-- Phone Contact -->
+    <p style="margin-top:20px; color:#bbb; z-index:1; position:relative;">
+      Or contact our Sponsorship Lead: <a href="tel:+911234567890" style="color:#00acee; text-decoration:none;">+91 12345 67890</a>
+    </p>
+    </div>
+  </body>
+ </html>
 
