Update gallery CSS and gallery page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               <div class="navhead our-team">Our Team</div>
               <div class="navhead past-events">Our Events</div>
               <div class="navhead blogs">Blogs</div>
+              <div class="gallery"><a href="gallery.html">Gallery</a></div>
+               
+
               <div class="navhead contact-us">
                 <button class="button-contact">Contact Us</button>
               </div>
