--- a/nav.html
+++ b/nav.html
@@ -26,6 +26,7 @@
             <div class="about-us">About Us</div>
             <div class="our-team">Our Team</div>
             <div class="past-events">Our Events</div>
+            <div class="gallery"><a href="gallery.html">Gallery</a></div>
             <div class="contact-us">
               <button class="button-contact">Contact Us</button>
             </div>
