--- a/gallery.html
+++ b/gallery.html
@@ -52,15 +52,21 @@
   <!-- Gallery Section -->
   <section class="gallery">
     <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="Gallery Image 1">
-      <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="Gallery Image 2">
-      <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="Gallery Image 3">
-      <img src="https://i.postimg.cc/RCXVVsF2/8.jpg" alt="Gallery Image 4">
-      <img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="Gallery Image 5">
-      <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="Gallery Image 6">
-    
-    </div>
+    <div class="gallery-flex">
+  <div class="column left">
+    <div class="item"><img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt=""></div>
+    <div class="item"><img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt=""></div>
+  </div>
+  <div class="column middle">
+    <div class="item"><img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt=""></div>
+    <div class="item"><img src="https://i.postimg.cc/RCXVVsF2/8.jpg" alt=""></div>
+  </div>
+  <div class="column right">
+    <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt=""></div>
+    <div class="item"><img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt=""></div>
+  </div>
+</div>
+
   </section>
 
   <footer>
