updates on navbar and adding ids to it

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
         <navbar>
           <span id="navbar-overlay">
             <div class="container-nav">
-              <div class="navhead about-us" href="#about-text">About Us</div>
+              <div class="navhead about-us" href="index.html">About Us</div>
               <div class="navhead our-team">Our Team</div>
               <div class="navhead past-events">Our Events</div>
               <div class="navhead blogs">Blogs</div>
