--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
         <nav>
           <span id="navbar-overlay">
             <div class="container-nav">
-              <div class="navhead about-us" href="#about-text">About Us</div>
-              <a class="navhead our-team" href="our-team.html">Our Team</a>
-              <div class="navhead past-events"> Our Events</div>
-              <div class="navhead blogs">Blogs</div>
+              <div class="navhead about-us" id="about-us">About Us</div>
+              <a class="navhead our-team" id="our-team">Our Team</a>
+              <div class="navhead past-events" id="past-events">Our Events</div>
+              <div class="navhead blogs" id="blogs">Blogs</div>
               <div class="gallery"><a href="gallery.html">Gallery</a></div>
-               
 
               <div class="navhead contact-us">
-                <button class="button-contact" onclick="window.location.href='contact.html'">Contact Us</button>
+                <button
+                  class="button-contact"
+                  onclick="window.location.href='contact.html'"
+                >
+                  Contact Us
+                </button>
               </div>
             </div>
           </span>
@@ -103,7 +107,6 @@
       </div>
     </section>
 
-  
     <!-- Recruitment Form Section -->
     <section class="recruitment" id="recruitment">
       <h2>Join E-Cell</h2>
@@ -171,7 +174,3 @@
 
   </body>
 </html> -->
-
-
-
-
