adding links to navbar

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <nav>
           <span id="navbar-overlay">
             <div class="container-nav">
-              <div class="navhead about-us" id="about-us">About Us</div>
-              <a class="navhead our-team" id="our-team">Our Team</a>
-              <div class="navhead past-events" id="past-events">Our Events</div>
-              <div class="navhead blogs" id="blogs">Blogs</div>
-              <div class="gallery"><a href="gallery.html">Gallery</a></div>
+              <a class="navhead about-us" href="index.html">About Us</a>
+              <a class="navhead our-team" href="our-team.html">Our Team</a>
+              <a class="navhead past-events" href="events.html">Our Events</a>
+              <a class="navhead blogs" href="blogs.html">Blogs</a>
+              <a class="navhead gallery" href="gallery.html">Gallery</a>
 
               <div class="navhead contact-us">
                 <button
                   class="button-contact"
-                  onclick="window.location.href='contact.html'"
+                  onclick="location.href='contact.html'"
                 >
                   Contact Us
                 </button>
