--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery - E-Cell IGDTUW</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gallery - E-Cell IGDTUW</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
@@ -19,60 +19,75 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
       rel="stylesheet"
     />
-</head>
-<body>
-  <!-- Navbar -->
-  <div id="navbar-placeholder">
-    <header>
-      <div class="head-nav">
-        <div class="logo">
-          <img id="logo" src="logo.jpeg" />
-          <div id="logo-text">E-Cell</div>
-        </div>
-        <navbar>
-          <span id="navbar-overlay">
-            <div class="container-nav">
-              <div class="navhead about-us" href="index.html">About Us</div>
-              <div class="navhead our-team">Our Team</div>
-              <div class="navhead past-events">Our Events</div>
-              <div class="navhead blogs">Blogs</div>
-              <div class="gallery"><a href="gallery.html"> </a>Gallery</a></div>
-               
+  </head>
+  <body>
+    <!-- Navbar -->
+    <div id="navbar-placeholder">
+      <header>
+        <div class="head-nav">
+          <div class="logo">
+            <img id="logo" src="logo.jpeg" />
+            <div id="logo-text">E-Cell</div>
+          </div>
+          <navbar>
+            <span id="navbar-overlay">
+              <div class="container-nav">
+                <a class="navhead about-us" href="index.html">About Us</a>
+                <a class="navhead our-team" href="our-team.html">Our Team</a>
+                <a class="navhead past-events" href="events.html">Our Events</a>
+                <a class="navhead blogs" href="blogs.html">Blogs</a>
+                <a class="navhead gallery" href="gallery.html">Gallery</a>
 
-              <div class="navhead contact-us">
-                <button class="button-contact">Contact Us</button>
+                <div class="navhead contact-us">
+                  <button
+                    class="button-contact"
+                    onclick="location.href='contact.html'"
+                  >
+                    Contact Us
+                  </button>
+                </div>
               </div>
-            </div>
-          </span>
-        </navbar>
+            </span>
+          </navbar>
+        </div>
+      </header>
+    </div>
+
+    <!-- Gallery Section -->
+    <section class="gallery">
+      <h2>Gallery</h2>
+      <div class="gallery-flex">
+        <div class="column left">
+          <div class="item">
+            <img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
+          </div>
+        </div>
+        <div class="column middle">
+          <div class="item">
+            <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/RCXVVsF2/8.jpg" alt="" />
+          </div>
+        </div>
+        <div class="column right">
+          <div class="item">
+            <img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" />
+          </div>
+        </div>
       </div>
-    </header>
-  </div>
+    </section>
 
-  <!-- Gallery Section -->
-  <section class="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery-flex">
-  <div class="column left">
-    <div class="item"><img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt=""></div>
-    <div class="item"><img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt=""></div>
-  </div>
-  <div class="column middle">
-    <div class="item"><img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt=""></div>
-    <div class="item"><img src="https://i.postimg.cc/RCXVVsF2/8.jpg" alt=""></div>
-  </div>
-  <div class="column right">
-    <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt=""></div>
-    <div class="item"><img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt=""></div>
-  </div>
-</div>
+    <footer>
+      <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
+    </footer>
 
-  </section>
-
-  <footer>
-    <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
