Add gallery images and update gallery styling

--- a/gallery.html
+++ b/gallery.html
@@ -64,13 +64,23 @@
           <div class="item">
             <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
           </div>
+           <div class="item">
+            <img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
+          </div>
+
         </div>
         <div class="column middle">
           <div class="item">
-            <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
+            <img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" />
           </div>
           <div class="item">
-            <img src="https://i.postimg.cc/RCXVVsF2/8.jpg" alt="" />
+            <img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" />
           </div>
         </div>
         <div class="column right">
@@ -80,6 +90,13 @@
           <div class="item">
             <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" />
           </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
+          </div>
+         
         </div>
       </div>
     </section>
