updates of event

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="navhead blogs" href="blogs.html">Blogs</a>
               <a class="navhead gallery" href="gallery.html">Gallery</a>
 
-              <div class="navhead contact-us">
+              <div class="contact-us">
                 <button
                   class="button-contact"
                   onclick="location.href='contact.html'"
@@ -86,24 +86,77 @@
     </div>
 
     <!-- Events Section -->
-    <section class="events" id="events">
-      <h2>Our Events</h2>
-      <div class="event-cards">
+    <section id="events" class="events">
+      <h2>Moment of Glimpses</h2>
+      <h3>Past Events</h3>
+      <div class="event-grid">
         <div class="event-card">
-          <img src="assets/event1.png" alt="Event 1" />
-          <h3>Hackathon 2025</h3>
-          <p>Innovate and code your way to success!</p>
+          <div class="event-image-container">
+            <img src="case-conq.png" alt="Case Conqueror 2025" />
+          </div>
+          <div class="initial-info">
+            <h3>Code Conqueror 2025</h3>
+            <p>Case Study Competition</p>
+          </div>
+          <div class="detailed-info">
+            <h3>Code Conqueror 2025</h3>
+            <p>
+              Case-Uncase is not just another case study competition—it’s a
+              battlefield of wits, strategy, and innovation! Hosted by ECELL
+              IGDTUW and powered by Unstop, this high-intensity inter-college
+              showdown challenges undergraduate students (any year) to take on
+              real-world business problems and craft bold, game-changing
+              solutions.
+            </p>
+            <a href="#" class="cta-button">Learn More</a>
+          </div>
         </div>
+
         <div class="event-card">
-          <img src="assets/event2.png" alt="Event 2" />
-          <h3>Startup Workshop</h3>
-          <p>Learn from industry leaders and mentors.</p>
+          <div class="event-image-container">
+            <img src="ideastorm.png" alt="Ideastorm" />
+          </div>
+          <div class="initial-info">
+            <h3>Ideastorm</h3>
+            <p>Competition</p>
+          </div>
+          <div class="detailed-info">
+            <h3>Ideastorm</h3>
+            <p>
+              We organized an Ideathon which ignited a flurry of creativity and
+              innovation! Participants brainstormed and collaborated on
+              cutting-edge ideas, sparking dynamic discussions and crafting bold
+              solutions. The energy was electric as we explored new
+              possibilities and pushed boundaries.
+            </p>
+            <a href="#" class="cta-button">Learn More</a>
+          </div>
         </div>
+
         <div class="event-card">
-          <img src="assets/event3.png" alt="Event 3" />
-          <h3>Entrepreneurship Talk</h3>
-          <p>Gain insights from successful entrepreneurs.</p>
+          <div class="event-image-container">
+            <img src="drishti.png" alt="Drishti Voyage" />
+          </div>
+          <div class="initial-info">
+            <h3>Drishti Voyage</h3>
+            <p>Speaker Session</p>
+          </div>
+          <div class="detailed-info">
+            <h3>Drishti Voyage</h3>
+            <p>
+              Our Speaker Session with Drishti IAS was a burst of inspiration
+              and insight! Mr. Prashant Sharma's wisdom and innovative approach,
+              alongside Abhishek Mishra's deep expertise in guiding UPSC
+              aspirants, fueled an electrifying atmosphere. The event was a
+              whirlwind of dynamic discussions and actionable strategies
+            </p>
+            <a href="#" class="cta-button">Learn More</a>
+          </div>
         </div>
+      </div>
+
+      <div class="events-cta">
+        <a href="#" class="all-events-button">View All Events</a>
       </div>
     </section>
 
