--- a/nav.html
+++ b/nav.html
@@ -12,8 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-   
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -23,31 +27,28 @@
           <img id="logo" src="logo.jpeg" />
           <div id="logo-text">E-Cell</div>
         </div>
-<<<<<<< HEAD
-        <navbar>
-          <div class="container-nav">
-            <div class="about-us">About Us</div>
-            <div class="our-team">Our Team</div>
-            <div class="past-events">Our Events</div>
-            <div class="gallery"><a href="gallery.html">Gallery</a></div>
-=======
-         <nav>
-      <ul class="container-nav">
-        <li><a href="#about">About Us</a></li>
-        <a href="our-team.html">Our Team</a>
-        <li><a href="#events">Our Events</a></li>
->>>>>>> 1db41af88185b7dfaf13af8387a6caf7db699f69
-            <div class="contact-us">
-              <button class="button-contact">Contact Us</button>
+        <nav>
+          <span id="navbar-overlay">
+            <div class="container-nav">
+              <a class="navhead about-us" href="index.html">About Us</a>
+              <a class="navhead our-team" href="our-team.html">Our Team</a>
+              <a class="navhead past-events" href="events.html">Our Events</a>
+              <a class="navhead blogs" href="blogs.html">Blogs</a>
+              <a class="navhead gallery" href="gallery.html">Gallery</a>
+
+              <div class="contact-us">
+                <button
+                  class="button-contact"
+                  onclick="location.href='contact.html'"
+                >
+                  Contact Us
+                </button>
+              </div>
             </div>
-        </ul>
-         </nav>
-          </div>
-        </navbar>
+          </span>
+        </nav>
       </div>
     </header>
+    <h1 style="color: white; text-align: center">Coming soon!</h1>
   </body>
-
 </html>
-
-
