--- a/our-team.html
+++ b/our-team.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <!-- <title>Our Team • E-Cell IGDTUW</title> -->
 
-  <!-- Google Font (cute but clean) -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap" rel="stylesheet">
+
 
 
   <style>
@@ -23,6 +25,21 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
+body {
+  font-family: 'Crimson Text', 'Libre Baskerville', serif;
+}
+
+h1, h2, h3, .pill {
+  font-family: 'Libre Baskerville', 'Crimson Text', serif;
+  font-weight: 400; /* avoid bold if too abrupt */
+}
+
+nav a, .role, .name {
+  font-family: 'Crimson Text', 'Libre Baskerville', serif;
+  font-weight: 400; /* smooth, not heavy */
+}
+
+
       margin:0;
       font-family:Poppins, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background:
@@ -31,14 +48,69 @@
         var(--bg);
       color:var(--text);
     }
-/* 
-    /* ---------- Header / Nav ---------- */
-    /* header{
-      position:sticky; top:0; z-index:50;
-      backdrop-filter:saturate(120%) blur(6px);
-      background:rgba(10,10,10,.65);
-      border-bottom:1px solid rgba(255,255,255,.06);
-    /* } */
+    
+.back-arrow-circle {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 30px;
+  height: 30px;
+  background: var(--panel);  /* or any subtle background */
+  border-radius: 50%;        /* makes it a perfect circle */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--accent);
+  cursor: pointer;
+  z-index: 1000;
+  transition: transform 0.2s ease, background 0.2s ease, color 0.2s ease;
+  padding-bottom: 4px;
+}
+
+.back-arrow-circle:hover {
+  transform: translateX(-3px);
+  background: var(--accent);      /* optional hover background */
+  color: #111;                     /* contrast on hover */
+}
+
+
+
+    /* Meet the Team heading font */
+.team-heading {
+  font-family: 'Crimson Text', serif; /* bold, classic font */
+  font-weight: 700;
+  font-size: clamp(2rem, 5vw, 2.5rem);
+  margin: 0 0 8px;
+}
+
+/* Subtext font */
+.team-subtext {
+  font-family: 'Libre Baskerville', serif; /* clean, readable */
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: #bbb;
+  margin: 0 0 12px;
+}
+
+/* Nav button Our Team */
+.navhead.our-team {
+  font-family: 'Libre Baskerville', serif; /* same as rest of site */
+  font-weight: 600;
+  color: #f5f5f5; /* off-white */
+  text-decoration: none;
+  border-radius: 12px; /* rounded corners */
+  padding: 8px 12px;
+  transition: all 0.2s ease;
+}
+
+.navhead.our-team:hover {
+  background: #ffd166; /* warm accent on hover */
+  color: #111;
+}
+
+
     .nav-wrap{
       max-width:1100px; margin:0 auto; padding:10px 16px;
       display:flex; align-items:center; justify-content:space-between;
@@ -150,21 +222,47 @@
       transition:all .15s ease;
     }
     .clear-btn:hover{border-color:var(--ring); color:var(--text)}
+
+    .top-close {
+  position: fixed;   /* fixed so it stays on top */
+  top: 10px;         /* distance from top of viewport */
+  right: 20px;       /* distance from right */
+  font-size: 2rem;   /* adjust size as needed */
+  font-weight: bold;
+  color: #fff;       /* off-white color */
+  cursor: pointer;
+  z-index: 10000;    /* very high to stay above everything */
+  transition: color 0.2s ease;
+  padding-right: 5px;
+}
+
+.top-close:hover {
+  color: #ffd166;    /* hover accent color */
+}
+
+
   </style>
 </head>
 
 <body>
   <!-- Header -->
+  <div class="back-arrow-circle" onclick="location.href='index.html'">
+  &#8592;
+</div>
+
+  <div class="top-close" onclick="location.href='index.html'">&times;</div>
+ 
+
   <header>
     <div class="nav-wrap">
-      <a href="" class="brand">
+      <!-- <a href="" class="brand">
         <img src="logo.jpeg" alt="E-Cell logo" />
         <span></span>
       </a>
       <nav>
         <a href="index.html">Home</a>
         <a href="our-team.html" class="active">Our Team</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="contact.html">Contact Us</a> -->
       </nav>
     </div>
   </header>
@@ -172,8 +270,8 @@
   <!-- Hero -->
   <section class="hero">
     <div>
-      <h1>Meet the Team ✨</h1>
-      <p>Creative, kind, and a little unstoppable.</p>
+      <h1 class="team-heading">Meet the Team ✨</h1>
+      <p class="team-subtext">Creative, kind, and a little unstoppable.</p>
       <span class="pill">2025–26 Council</span>
     </div>
     <div class="tools">
@@ -194,47 +292,49 @@
        Put member photos in /team/ (e.g., team/deepasha.jpg).
        Tip: use square images for best results. */
     const teamMembers = [
-      { name: "Deepasha Dahiya", role: "Web-Dev Lead", img: "team-photos/deepasha.png" },
-      { name: "Aarushi Mehta", role: "President", img: "team-photos/aarushi.jpg" },
-      { name: "Rohan Verma", role: "Vice President", img: "team-photos/rohan.jpg" },
-      { name: "Isha Kapoor", role: "Design Lead", img: "team-photos/isha.jpg" },
-      { name: "Priya Singh", role: "Marketing Lead", img: "team-photos/priya.jpg" },
-      { name: "Tanya Gupta", role: "Events Head", img: "team-photos/tanya.jpg" },
-      { name: "Ananya Rao", role: "Content Lead", img: "team-photos/ananya.jpg" },
-      { name: "Harshita Jain", role: "Sponsorships", img: "team-photos/harshita.jpg" },
-      { name: "Simran Kaur", role: "Outreach", img: "team-photos/simran.jpg" },
-      { name: "Nidhi Sharma", role: "Community", img: "team-photos/nidhi.jpg" },
-      { name: "Aditi Bose", role: "PR & Media", img: "team-photos/aditi.jpg" },
-      { name: "Kritika Malhotra", role: "Design", img: "team-photos/kritika.jpg" },
-      { name: "Sana Khan", role: "Tech", img: "team-photos/sana.jpg" },
-      { name: "Ritika Arora", role: "Operations", img: "team-photos/ritika.jpg" },
-      { name: "Mehak Choudhary", role: "Logistics", img: "team-photos/mehak.jpg" },
-      { name: "Shreya Taneja", role: "Finance", img: "team-photos/shreya.jpg" },
-      { name: "Avantika Tyagi", role: "Editorial", img: "team/avantika.jpg" },
-      { name: "Neha Yadav", role: "Community", img: "team/neha.jpg" },
-      { name: "Ira Bansal", role: "Events", img: "team/ira.jpg" },
-      { name: "Tanvi Kohli", role: "Tech", img: "team/tanvi.jpg" },
+
+      { name: "Sanika Khanduja", role: "President", img: "team-photos/SANIKA KHANDUJA.png", linkedin: "https://www.linkedin.com/in/sanika-khanduja-8432a5280/" },
+      { name: "Prisha Jain", role: "Vice President", img: "team-photos/PRISHA JAIN.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Anusha Arora", role: "Vice President", img: "team-photos/ANUSHA ARORA.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Pearl Vashistha", role: "Executive Director", img: "team-photos/PEARL VASHISTHA.png", linkedin: "https://www.linkedin.com/in/pearlvashistha2006/" },
+      { name: "Lavanya Gupta", role: "Treasurer", img: "team-photos/LAVANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/lavanya-gupta-455185280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
+      { name: "Harshita Tanwar", role: "Joint Secretary", img: "team-photos/HARSHITA TANWAR.png" , linkedin: "https://www.linkedin.com/in/harshita-tanwar-ab3569288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
+      { name: "Riya Mahajan", role: "Joint Secretary", img: "team-photos/RIYA MAHAJAN.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },       
+      { name: "Harshita Aggarwal", role: "Joint Secretary", img: "team-photos/HARSHITA AGGARWAL.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Ananya Dhawan", role: "Operations Lead", img: "team-photos/ANANYA DHAWAN.png", linkedin: "https://www.linkedin.com/in/ananya-dhawan28?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" },
+      { name: "Deepasha Dahiya", role: "Web-Dev Lead", img: "team-photos/DEEPASHA DAHIYA.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Sharanya Gupta", role: "Creative Lead", img: "team-photos/SHARANYA GUPTA.png" , linkedin: "https://www.linkedin.com/in/sharanya-gupta-520033350/"},
+      { name: "Manya Gupta", role: "Content Lead", img: "team-photos/MANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/manya-gupta-02ab63288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
+      { name: "Enakshi Pardhe", role: "Sponsorship Lead", img: "team-photos/ENAKSHI PARDHE.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Ritika Arora", role: "R&D Lead", img: "team-photos/RITIKA ARORA.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Mehak Choudhary", role: "Marketing Lead", img: "team-photos/MEHAK CHOUDHARY.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Manishika Gupta ", role: "Media Lead", img: "team-photos/MANISHIKA GUPTA.png", linkedin: "https://www.linkedin.com/in/manishika-gupta30/" },
+      { name: "YOU", role: "Editorial", img: "team-photos/YOU.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "CAN", role: "Community", img: "team-photos/CAN.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/"},
+      { name: "BE", role: "Events", img: "team-photos/BE.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "NEXT!", role: "Tech", img: "team-photos/tanvi.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
       // add more if needed
     ];
 
     const grid = document.getElementById("teamGrid");
 
-    function cardTemplate({name, role, img}) {
-      // fallback to logo.jpeg if image missing
-      const safeImg = img || "logo.jpeg";
-      return `
-        <article class="card">
-          <img class="avatar" src="${safeImg}" alt="${name}" onerror="this.src='logo.jpeg'">
-          <h3 class="name">${name}</h3>
-          <p class="role">${role}</p>
-          <div class="socials">
-            <!-- Optional social links; fill hrefs if you have them -->
-            <!-- <a href="#" title="LinkedIn">in</a>
-            <a href="#" title="Instagram">ig</a> -->
-          </div>
-        </article>
-      `;
-    }
+function cardTemplate({name, role, img, linkedin}) {
+  const safeImg = img || "logo.jpeg";
+  const linkedInLink = linkedin ? `<a href="${linkedin}" target="_blank" class="linkedin-link">in</a>` : "";
+  
+  return `
+    <article class="card">
+      <img class="avatar" src="${safeImg}" alt="${name}" onerror="this.src='logo.jpeg'">
+      <h3 class="name">${name}</h3>
+      <p class="role">${role}</p>
+      <div class="socials">
+        ${linkedInLink}
+      </div>
+    </article>
+  `;
+}
+
+
 
     function render(list){
       grid.innerHTML = list.map(cardTemplate).join("");
