--- a/our-team.html
+++ b/our-team.html
@@ -377,19 +377,15 @@ nav a, .role, .name {
       { name: "Lavanya Gupta", role: "Treasurer", img: "team-photos/LAVANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/lavanya-gupta-455185280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Harshita Tanwar", role: "Joint Secretary", img: "team-photos/HARSHITA TANWAR.png" , linkedin: "https://www.linkedin.com/in/harshita-tanwar-ab3569288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Riya Mahajan", role: "Joint Secretary", img: "team-photos/RIYA MAHAJAN.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },       
-      { name: "Harshita Aggarwal", role: "Joint Secretary", img: "team-photos/HARSHITA AGGARWAL.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Harshita Aggarwal", role: "Joint Secretary", img: "team-photos/HARSHITA-AGGARWAL.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
       { name: "Ananya Dhawan", role: "Operations Lead", img: "team-photos/ANANYA DHAWAN.png", linkedin: "https://www.linkedin.com/in/ananya-dhawan28?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" },
       { name: "Deepasha Dahiya", role: "Web-Dev Lead", img: "team-photos/DEEPASHA DAHIYA.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Sharanya Gupta", role: "Creative Lead", img: "team-photos/SHARANYA GUPTA.png" , linkedin: "https://www.linkedin.com/in/sharanya-gupta-520033350/"},
-      { name: "Manya Gupta", role: "Content Lead", img: "team-photos/MANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/manya-gupta-02ab63288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
+      { name: "Manishika Gupta ", role: "Media Lead", img: "team-photos/MANISHIKA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manishika-gupta30/" },
+      { name: "Sharanya Gupta", role: "Creative Lead", img: "team-photos/SHARANYA  GUPTA.png" , linkedin: "https://www.linkedin.com/in/sharanya-gupta-520033350/"},
+      { name: "Manya Gupta", role: "Content Lead", img: "team-photos/MANYA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manya-gupta-02ab63288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Enakshi Pardhe", role: "Sponsorship Lead", img: "team-photos/ENAKSHI PARDHE.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Ritika Arora", role: "R&D Lead", img: "team-photos/RITIKA ARORA.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Mehak Choudhary", role: "Marketing Lead", img: "team-photos/MEHAK CHOUDHARY.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Manishika Gupta ", role: "Media Lead", img: "team-photos/MANISHIKA GUPTA.png", linkedin: "https://www.linkedin.com/in/manishika-gupta30/" },
-      { name: "YOU", role: "Editorial", img: "team-photos/YOU.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "CAN", role: "Community", img: "team-photos/CAN.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/"},
-      { name: "BE", role: "Events", img: "team-photos/BE.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "NEXT!", role: "Tech", img: "team-photos/tanvi.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Keva Mirg", role: "R&D Lead", img: "team-photos/KEVA MIRG.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Sejal", role: "Marketing Lead", img: "team-photos/SEJAL.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
       // add more if needed
     ];
 
