--- a/our-team.html
+++ b/our-team.html
@@ -383,9 +383,9 @@ nav a, .role, .name {
       { name: "Manishika Gupta ", role: "Media Lead", img: "team-photos/MANISHIKA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manishika-gupta30/" },
       { name: "Sharanya Gupta", role: "Creative Lead", img: "team-photos/SHARANYA  GUPTA.png" , linkedin: "https://www.linkedin.com/in/sharanya-gupta-520033350/"},
       { name: "Manya Gupta", role: "Content Lead", img: "team-photos/MANYA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manya-gupta-02ab63288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
-      { name: "Enakshi Pardhe", role: "Sponsorship Lead", img: "team-photos/ENAKSHI PARDHE.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Keva Mirg", role: "R&D Lead", img: "team-photos/KEVA MIRG.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Sejal", role: "Marketing Lead", img: "team-photos/SEJAL.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Enakshi Pardhe", role: "Sponsorship Lead", img: "team-photos/ENAKSHI PARDHE.png", linkedin: "https://www.linkedin.com/company/ecelligdtuw/posts/?feedView=all" },
+      { name: "Keva Mirg", role: "R&D Lead", img: "team-photos/KEVA MIRG.png", linkedin: "https://www.linkedin.com/in/keva-mirg-1b6401290/?originalSubdomain=in" },
+      { name: "Sejal", role: "Marketing Lead", img: "team-photos/SEJAL.png", linkedin: "https://www.linkedin.com/company/ecelligdtuw/posts/?feedView=all" },
       // add more if needed
     ];
 
