--- a/our-team.html
+++ b/our-team.html
@@ -264,14 +264,15 @@ nav a, .role, .name {
         border-radius: 999px;
         border: 1px solid rgba(255, 255, 255, 0.14);
         color: var(--text);
+        /* background-color:#0a66c2 ; */
         text-decoration: none;
         font-size: 0.85rem;
         transition: background 0.15s ease, transform 0.15s ease,
           border-color 0.15s ease;
       }
       .socials a:hover {
-        background: linear-gradient(90deg, var(--accent), var(--accent-2));
-        color: #111;
+        background-color:#0a66c2 ;
+        color: white;
         border-color: transparent;
         transform: translateY(-1px);
       }
