--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
           </p>
           <br />
           <div>
-            <button
-              class="recruit"
-              href="#recruitment"
-              style="margin-right: 1rem"
-            >
+            <button class="recruit" style="margin-right: 1rem">
               Recruitment Form
             </button>
             <button class="button-join">Join for Updates</button>
@@ -108,7 +104,7 @@
               real-world business problems and craft bold, game-changing
               solutions.
             </p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="events.html" class="cta-button">Learn More</a>
           </div>
         </div>
 
@@ -129,7 +125,7 @@
               solutions. The energy was electric as we explored new
               possibilities and pushed boundaries.
             </p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="events.html" class="cta-button">Learn More</a>
           </div>
         </div>
 
@@ -150,19 +146,19 @@
               aspirants, fueled an electrifying atmosphere. The event was a
               whirlwind of dynamic discussions and actionable strategies
             </p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="events.html" class="cta-button">Learn More</a>
           </div>
         </div>
       </div>
 
       <div class="events-cta">
-        <a href="#" class="all-events-button">View All Events</a>
+        <a href="events.html" class="all-events-button">View All Events</a>
       </div>
     </section>
 
     <!-- Recruitment Form Section -->
-    <section class="recruitment" id="recruitment">
-      <h2>Join E-Cell</h2>
+    <!-- <section class="sponsors" id="sponsors">
+      <h2>Sponsors</h2>
       <form action="#" class="recruit-form">
         <input type="text" placeholder="Full Name" required />
         <input type="email" placeholder="Email" required />
@@ -170,23 +166,45 @@
         <textarea placeholder="Your Interests" required></textarea>
         <button type="submit" class="btn">Submit</button>
       </form>
-    </section>
+    </section> -->
 
-    <!-- Contact Us Section -->
+    <!-- Contact Us Section
     <section class="contact" id="contact">
       <h2>Contact Us</h2>
       <div class="contact-details">
-        <p>Email: info@ecell-igdtuw.com</p>
-        <p>Phone: +91-XXXXXXXXXX</p>
+        <p>Email: Ecell.igdtu@gmail.com</p>
+        <p>Phone: +91-98119 11639</p>
         <div class="socials">
-          <a href="#">Instagram</a> | <a href="#">LinkedIn</a> |
-          <a href="#">Facebook</a>
+          <a href="https://www.instagram.com/ecell.igdtuw/">Instagram</a> |
+          <a
+            href="https://www.linkedin.com/company/ecelligdtuw/?originalSubdomain=in"
+            >LinkedIn</a
+          >
         </div>
       </div>
-    </section>
+    </section> -->
+    <br />
 
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
+      <div class="footer-contact">
+        <span
+          >Email:
+          <a href="mailto:Ecell.igdtu@gmail.com">Ecell.igdtu@gmail.com</a></span
+        >
+        | <span>Phone: <a href="tel:+919811911639">+91-98119 11639</a></span> |
+        <span>
+          <a href="https://www.instagram.com/ecell.igdtuw/" target="_blank"
+            >Instagram</a
+          >
+          |
+          <a
+            href="https://www.linkedin.com/company/ecelligdtuw/?originalSubdomain=in"
+            target="_blank"
+            >LinkedIn</a
+          >
+        </span>
+      </div>
       <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
     </footer>
 
