--- a/our-team.html
+++ b/our-team.html
@@ -348,9 +348,9 @@ nav a, .role, .name {
   <!-- Hero -->
   <section class="hero">
     <div>
-      <h1 class="team-heading">Meet the Team ✨</h1>
+      <h1 class="team-heading">Meet the Team </h1>
       <p class="team-subtext">Creative, kind, and a little unstoppable.</p>
-      <span class="pill">2025–26 Council</span>
+      <span class="pill">2025-26 Council</span>
     </div>
     <div class="tools">
       <input id="search" class="srch" type="search" placeholder="Search name or role…" />
