--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
                 <a class="navhead blogs" href="blogs.html">Blogs</a>
                 <a class="navhead gallery" href="gallery.html">Gallery</a>
 
-                <div class="navhead contact-us">
+                <div class="contact-us">
                   <button
                     class="button-contact"
                     onclick="location.href='contact.html'"
@@ -64,13 +64,12 @@
           <div class="item">
             <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
           </div>
-           <div class="item">
+          <div class="item">
             <img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" />
           </div>
           <div class="item">
             <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
           </div>
-
         </div>
         <div class="column middle">
           <div class="item">
@@ -96,7 +95,6 @@
           <div class="item">
             <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
           </div>
-         
         </div>
       </div>
     </section>
