--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,12 @@
           <div class="item">
             <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
           </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" />
+          </div>
         </div>
         <div class="column middle">
           <div class="item">
@@ -80,6 +86,9 @@
           </div>
           <div class="item">
             <img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" />
           </div>
         </div>
         <div class="column right">
@@ -94,6 +103,9 @@
           </div>
           <div class="item">
             <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" />
           </div>
         </div>
       </div>
