Updated name and linkedin update

--- a/our-team.html
+++ b/our-team.html
@@ -373,7 +373,7 @@ nav a, .role, .name {
 
       { name: "Sanika Khanduja", role: "President", img: "team-photos/SANIKA KHANDUJA.png", linkedin: "https://www.linkedin.com/in/sanika-khanduja-8432a5280/" },
       { name: "Prisha Jain", role: "Vice President", img: "team-photos/prisha jain.png", linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
-      { name: "Anusha Arora", role: "Vice President", img: "team-photos/ANUSHA ARORA.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Anusha Arora", role: "Managing Director", img: "team-photos/ANUSHA ARORA.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
       { name: "Pearl Vashistha", role: "Executive Director", img: "team-photos/PEARL VASHISTHA.png", linkedin: "https://www.linkedin.com/in/pearlvashistha2006/" },
       { name: "Lavanya Gupta", role: "Treasurer", img: "team-photos/LAVANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/lavanya-gupta-455185280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Harshita Tanwar", role: "Joint Secretary", img: "team-photos/HARSHITA TANWAR.png" , linkedin: "https://www.linkedin.com/in/harshita-tanwar-ab3569288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
