--- a/our-team.html
+++ b/our-team.html
@@ -378,7 +378,7 @@ nav a, .role, .name {
       { name: "Lavanya Gupta", role: "Treasurer", img: "team-photos/LAVANYA GUPTA.png", linkedin: "https://www.linkedin.com/in/lavanya-gupta-455185280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Harshita Tanwar", role: "Joint Secretary", img: "team-photos/HARSHITA TANWAR.png" , linkedin: "https://www.linkedin.com/in/harshita-tanwar-ab3569288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Riya Mahajan", role: "Joint Secretary", img: "team-photos/RIYA MAHAJAN.png" , linkedin: "https://www.linkedin.com/in/riyamahajann/" },       
-      { name: "Harshita Aggarwal", role: "Joint Secretary", img: "team-photos/HARSHITA-AGGARWAL.png" , linkedin: "https://www.linkedin.com/in/deepasha-dahiya-7b59b1239/" },
+      { name: "Harshita Aggarwal", role: "Joint Secretary", img: "team-photos/HARSHITA-AGGARWAL.png" , linkedin: "https://www.linkedin.com/in/dehttps://www.linkedin.com/company/ecelligdtuw/epasha-dahiya-7b59b1239/" },
       { name: "Ananya Dhawan", role: "Operations Lead", img: "team-photos/ANANYA DHAWAN.png", linkedin: "https://www.linkedin.com/in/ananya-dhawan28?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" },
       { name: "Deepasha Dahiya", role: "Web-Dev Lead", img: "team-photos/DEEPASHA DAHIYA.png", linkedin: "https://www.linkedin.com/company/ecelligdtuw/" },
       { name: "Manishika Gupta ", role: "Media Lead", img: "team-photos/MANISHIKA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manishika-gupta30/" },
