--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -51,4 +51,4 @@
     </header>
     <h1 style="color: white; text-align: center">Coming soon!</h1>
   </body>
-</html>
+</html> -->
