update: add orientation image inside gallery section in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -76,6 +76,9 @@
           <div class="item">
             <img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" />
           </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" />
+          </div>
         </div>
         <div class="column middle">
           <div class="item">
@@ -90,6 +93,13 @@
           <div class="item">
             <img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" />
           </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" />
+          </div>
+           <div class="item">
+            <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="" />
+          </div>
+          
         </div>
         <div class="column right">
           <div class="item">
@@ -106,6 +116,12 @@
           </div>
           <div class="item">
             <img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" />
+          </div>
+          <div class="item">
+            <img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" />
+          </div>
+           <div class="item">
+            <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" />
           </div>
         </div>
       </div>
